--- a/src/styles.css
+++ b/src/styles.css
@@ -1,29 +1,73 @@
 .App {
   font-family: sans-serif;
-  text-align: center;
-  box-sizing: border-box;
-  padding: 0px;
-  margin: 0px;
+}
+.route-container {
+  background-color: rgb(243, 243, 243);
+  border: 1px solid red;
 }
 
 ul {
+  display: flex;
   margin: 0;
   padding: 0;
+  list-style: none;
 }
-
-a {
+ul > li {
+  padding: 12px;
+}
+ul > li > a {
   color: black;
-  padding: 16px;
+  text-decoration: none;
+  align-self: center;
+  font-weight: 500;
+  font-size: medium;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
-.conent {
+form,
+.Home {
   display: flex;
-  justify-content: center;
-  align-content: center;
-  height: 300px;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 220px;
+  border: 1px solid red;
+  margin: auto;
+  margin-top: 20px;
+  border-radius: 10px;
+  padding: 20px;
+  gap: 16px;
 }
-.Login .Home {
-  width: 100px; /* Or whatever */
-  height: 100px; /* Or whatever */
-  margin: auto; /* Magic! */
+input[type="submit"],
+button {
+  width: 100%;
+  background-color: #4caf50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="text"],
+input[type="password"],
+select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+.clickMe {
+  display: flex;
+  width: 100px;
+  margin: auto;
+  margin-top: 10px;
 }
